# rgb-schemas

./: Cargo.toml  README.md  _typos.toml
.github/workflows/: build.yml
examples/: cfa.rs  ifa.rs  nia.rs  pfa.rs  uda.rs
schemata/: CollectibleFungibleAsset.rgb  CollectibleFungibleAsset.rgba  InflatableFungibleAsset.rgb  InflatableFungibleAsset.rgba  NonInflatableAsset.rgb  NonInflatableAsset.rgba  NonInflatableAssets.rgb  NonInflatableAssets.rgba  PermissionedFungibleAsset.rgb  PermissionedFungibleAsset.rgba  UniqueDigitalAsset.rgb  UniqueDigitalAsset.rgba
src/: cfa.rs  ifa.rs  lib.rs  main.rs  nia.rs  pfa.rs  uda.rs
test/: cfa-example.rgb  cfa-example.rgba  ifa-example.rgb  ifa-example.rgba  nia-example.rgb  nia-example.rgba  pfa-example.rgb  pfa-example.rgba  rgb20-example.rgb  rgb20-example.rgba  rgb21-example.rgb  rgb21-example.rgba  rgb25-example.rgb  rgb25-example.rgba  uda-example.rgb  uda-example.rgba
