[package]
name = "rgb-schemata"
version = "0.11.1-alpha.2+unreviewed"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-schemata"
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-schemata"
required-features = ["fs"]

[lib]
name = "schemata"

[dependencies]
amplify = "4.8.0"
strict_types = "~2.8.3"
aluvm = "0.11.1-alpha.2"
bp-core = "0.11.1-alpha.2"
rgb-std = { version = "0.11.1-alpha.2", features = ["fs"] }

[dev-dependencies]
rgb-std = { version = "0.11.1-alpha.2", features = ["fs", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
sha2 = "0.10.8"

[features]
default = []
all = ["log", "fs"]
log = ["aluvm/log"]
fs = ["rgb-std/fs"]
