[package]
name = "rgb-schemas"
version = "0.11.1-rc.1"
description = "Collection of the official RGB smart contract schemata"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
homepage = "https://rgb.info"
repository = "https://github.com/rgb-protocol/rgb-schemas"
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-schemas"
required-features = ["fs"]

[lib]
name = "schemata"

[dependencies]
amplify = "4.8.0"
strict_types = "~2.8.3"
aluvm = "0.11.1-alpha.2"
bp-core = "0.11.1-alpha.2"
rgb-ops = { version = "0.11.1-rc.1", features = ["fs"] }

[dev-dependencies]
rgb-ops = { version = "0.11.1-rc.1", features = ["fs", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
sha2 = "0.10.8"

[features]
default = []
all = ["log", "fs"]
log = ["aluvm/log"]
fs = ["rgb-ops/fs"]
